k8s/busybox.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox:1.28
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    securityContext:
      runAsUser: 0
      allowPrivilegeEscalation: false
  restartPolicy: Always
---
